--- a/style.less
+++ b/style.less
@@ -58,12 +58,12 @@ body {
 
 .fadetop-init {
 	opacity: 0;
-	transform: translateY(-1%);
+	transform: translateY(-0.5%);
 }
 
 .fadetop-end {
 	opacity: 1;
-	transition: opacity 1s ease-out 0.1s, transform 0.7s ease-in 0.1s;
+	transition: opacity 2s ease 0.7s, transform 0.5s ease 0.7s;
 	transform: none;
 }
 
