--- a/style.less
+++ b/style.less
@@ -67,7 +67,7 @@ body {
 
 .fadetop-end {
 	opacity: 1;
-	transition: opacity 2s ease 0.7s, transform 0.5s ease 0.7s;
+	transition: opacity 2s ease, transform 0.5s ease;
 	transform: none;
 }
 
