Can't decide colorscheme. Trying pure white

--- a/style.less
+++ b/style.less
@@ -4,13 +4,22 @@
 @max-width: ~"(max-width: 795px)";
 @text-padding: 4rem;
 
+// Grey
 //@text-color: #232323;
 //@fg_white: #fffffa;
 //@bg_grey: shade(hsl(@fg_white), 65%);
-@text-color: black;
-@fg_white: #fffcf5;
-@bg_grey: @fg_white;
 //@vrule: 0.5px solid #b9b9b9;
+
+// Yellow
+//@text-color: black;
+//@fg_white: #fffcf5;
+//@bg_grey: @fg_white;
+//@vrule: 0.5px solid @fg_white;
+
+// White
+@text-color: black;
+@fg_white: white;
+@bg_grey: @fg_white;
 @vrule: 0.5px solid @fg_white;
 
 @font-face {
