--- a/style.less
+++ b/style.less
@@ -26,6 +26,7 @@
 	font-family: 'Ebrima';
 	font-style: normal;
 	font-weight: 400;
+	font-display: block;
 	src: local('Ebrima'), url("assets/ebrima.woff2") format('woff2');
 }
 
