--- a/style.less
+++ b/style.less
@@ -41,6 +41,11 @@ ul {
 }
 a {
 	color: inherit;
+	text-decoration: none;
+	border-bottom: 0.5px dotted;
+	&:hover {
+		border-bottom: 0.5px solid;
+	}
 }
 i {
 	padding-right: 7px;
