--- a/src/cv/style.css
+++ b/src/cv/style.css
@@ -1,182 +1,181 @@
-html, body, h1, h2, h3, h4, h5, h6, p {
+* {
+    box-sizing: border-box;
+}
+html, body, h1, h2, h3, h4, h5, h6, p, ul {
 	margin: 0;
 	padding: 0;
 }
-
-@font-face {
-  font-family: 'Ebrima';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Ebrima'), url("assets/ebrima.woff2") format('woff2');
-}
-
 html {
 	font-family: "Ebrima", sans-serif;
 	line-height: 1.5;
 	font-size: 16px;
 }
-
 a {
 	color: inherit;
 	text-decoration: none;
-	border-bottom: dotted 0.5px;
+	border-bottom: dotted 0.03125rem;
 }
 a:hover {
-	border-bottom: solid 0.5px;
+	border-bottom: solid 0.03125rem;
 }
-
-/* Font Awesome icons */
+/* Font Awesome icons are <i> */
 i {
-	padding-right: 7px;
+	padding-right: 0.5rem;
 }
-
 h1 {
 	font-size: 3rem;
 }
-
 h2 {
 	font-size: 1.8rem;
-	margin-bottom: 0.3rem;
 }
-
 h3 {
 	font-size: 1.2rem;
 }
-
+h4 {
+	font-weight: normal;
+}
 p {
 	text-indent: 1rem;
 }
-
-.center {
-	text-align: center;
-}
-
 body {
 	display: grid;
 	grid-template-columns: 35vw auto;
-	grid-template-rows: auto auto;
-	height: 100vh;
+	min-height: 100vh;
 }
-
-#content {
-	background-color: white;
-	grid-column-start: 2;
-	grid-column-end: 3;
-	grid-row-start: 1;
-	grid-row-end: 3;
-	padding: 0 1rem 0.5rem;
-}
-
-#side {
+aside {
 	background-image: url("assets/mine2.jpg");
 	background-position: bottom;
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: white;
-	grid-column-start: 1;
-	grid-column-end: 2;
-	grid-row-start: 1;
-	grid-row-end: 3;
-	padding: 1rem;
-	line-height: 1.7;
+	grid-column: 1 / 2;
+	padding: 1rem 1rem 0.5rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
-
 @media screen and (max-width: 830px) {
-  #side {
-		grid-column-start: 1;
-		grid-column-end: 3;
+  body aside {
+		grid-column: 1 / 3;
 		grid-row: 1;
 	}
-	#content {
-		grid-column-start: 1;
+	body article {
+		grid-column: 1 / 3;
 		grid-row: 2;
 	}
+	article side-by-side-wrap {
+    display: block;
+	}
+	article side-by-side-wrap hr {
+	  display: block;
+	}
+	article side-by-side-wrap gig:not(:last-child) {
+		border-right: none;
+		padding-right: 0;
+	}
+	article side-by-side-wrap gig:last-child {
+		padding-left: 0;
+	}
 }
-
-#img {
+aside hr {
+  color: white;
+}
+#photo {
 	text-align: center;
-	padding: 1rem 1rem 0;
 }
-
-.photo {
+#photo img {
 	border-radius: 500px;
-	max-width: 98%;
+	max-width: 100%;
 	max-height: 33vh;
 }
-
-#side ul {
-	padding: 0;
-	margin: 0;
+#name {
+	text-align: center;
+}
+#description {
+	text-align: center;
+	margin-top: -0.5rem;
+}
+#details {
 	list-style: none;
 }
-
-#ver {
+#details .fa-linkedin {
+  font-size: 1.125rem;
+}
+aside h3 {
+  margin-bottom: -0.2rem;
+}
+version {
 	font-size: 0.75rem;
+	text-align: right;
 }
-
-#descr {
-	margin-top: -10px;
+article {
+	background-color: white;
+	grid-column: 2 / 3;
+	padding: 0 1rem 0.75rem;
+	overflow-wrap: anywhere;
+	text-align: justify;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
 }
-
-#content hr {
+#experience {
+	margin-top: -0.5rem;
+}
+article hr {
 	width: 100%;
 	border: none;
 	border: 1px solid #f1f1f1;
 	/*margin: 0.5rem;*/
 }
-
-.parent-item {
-	display: flex;
-	flex-direction: column;
+gig {
+  display: block;
 }
-
-.parent-item h4 {
-	font-weight: normal;
-}
-
-.item {
+gig-header {
 	display: grid;
 	grid-template-columns: 15% auto;
-	grid-template-rows: auto auto;
 }
-.item i {
-	color: grey;
-	font-size: 15px;
-}
-
-.item-img {
-	grid-column-start: 1;
-	grid-column-end: 2;
+gig-img {
+	grid-column: 1 / 2;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.item-img img {
-	max-width: 95%;
-	max-height: 80%;
+gig-img img {
+	max-width: 100%;
+	max-height: 5rem;
 }
-
-.item-sum {
+gig-info {
 	padding-left: 0.5rem;
-	grid-column-start: 2;
-	grid-column-end: 3;
+	grid-column: 2 / 3;
 }
-.item-sum .fix {
+gig-info i {
+	color: grey;
+}
+gig-info i .fix {
 	margin-right: 3px;
 	margin-left: 2px;
 }
-
-.item-descr {
-	grid-column-start: 1;
-	grid-column-end: 3;
-	padding-top: 0.4rem;
-	font-size: 0.95rem;
+gig-description {
+  display: block;
+	grid-column: 1 / 3;
 }
-
-#proj {
+side-by-side-wrap {
 	display: grid;
 	grid-template-columns: 50% 50%;
+}
+side-by-side-wrap gig:not(:last-child) {
+	border-right: 1px solid #f1f1f1;
+	padding-right: 0.5rem;
+}
+side-by-side-wrap gig:last-child {
+	padding-left: 0.5rem;
+}
+side-by-side-wrap gig-header {
+	grid-template-columns: 25% auto;
+}
+side-by-side-wrap hr {
+  display: none;
+}
+projects {
+  font-weight: bold;
 }
