--- a/cv/style.css
+++ b/cv/style.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: local('Ebrima'), url("../assets/ebrima.woff2") format('woff2');
+  src: local('Ebrima'), url("assets/ebrima.woff2") format('woff2');
 }
 * {
     box-sizing: border-box;
