--- a/style.css
+++ b/style.css
@@ -63,8 +63,6 @@ header {
   margin-top: -0.5rem;
 }
 #header-text ul {
-  padding: 0;
-  margin-left: 2.5rem;
   word-break: break-word;
   list-style-type: none;
 }
@@ -79,7 +77,7 @@ header {
   header img {
     margin: auto auto 0.7rem;
   }
-  #header-text ul {
-    margin-left: 0;
+  ul {
+    padding: 0;
   }
 }
