--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 18px;
   line-height: 1.6;
+  overflow-wrap: break-word;
 }
 body {
   margin: 1rem;
@@ -67,7 +68,6 @@ header {
   margin-top: -0.5rem;
 }
 #header-text ul {
-  word-break: break-word;
   list-style-type: none;
 }
 #header-text i {
