--- a/templates/template.html
+++ b/templates/template.html
@@ -13,8 +13,7 @@
 	<meta property="og:site_name" content="João Pinheiro" />
   <!-- end common head -->
   <!-- start specific head -->
-  <!--<link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/base16/darcula.min.css">
+  <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/base16/darcula.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
   <script>hljs.highlightAll();</script>-->
 	<meta property="og:type" content="article" />
