--- a/templates/what-i-read.html.erb
+++ b/templates/what-i-read.html.erb
@@ -1,27 +1,5 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="João Pinheiro" />
-  <meta name="keywords" content="technology computer software engineering" />
-  <meta property="og:image" content="https://pineman.github.io/assets/me.webp" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:site_name" content="João Pinheiro" />
-
-  <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/base16/darcula.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-  <script>hljs.highlightAll();</script>-->
-	<meta property="og:type" content="article" />
-	<meta property="article:author" content="https://pineman.github.io" />
-	<meta property="article:section" content="pineman's Blog" />
-	<meta property="article:tag" content="technology" />
-	<meta property="article:tag" content="computer" />
-	<meta property="article:tag" content="software" />
-	<meta property="article:tag" content="engineering" />
-
+<%= File.read('head.html') %>
+<%= File.read('article_head.html') %>
 	<meta property="og:url" content="https://pineman.github.io/blog/what-i-read.html" />
 	<meta property="article:published_time" content="20221226" />
 	<meta property="article:modified_time" content="20221227" />
