--- a/templates/what-i-read.html.erb
+++ b/templates/what-i-read.html.erb
@@ -1,5 +1,5 @@
 <%= File.read('head.html') %>
-<%= File.read('article_head.html') %>
+<%= File.read('article-head.html') %>
 	<meta property="og:url" content="https://pineman.github.io/blog/what-i-read.html" />
 	<meta property="article:published_time" content="20221226" />
 	<meta property="article:modified_time" content="20221227" />
