--- a/templates/aoc3.html.erb
+++ b/templates/aoc3.html.erb
@@ -1,6 +1,6 @@
 <%= File.read('head.html') %>
-<%= File.read('article_head.html') %>
-	<meta property="og:url" content="https://pineman.github.io/blog/aoc3.html" />
+<%= File.read('article-head.html') %>
+	<meta property="og:url" content="https://pineman.github.io/aoc3.html" />
 	<meta property="article:published_time" content="20221203" />
 	<meta property="article:modified_time" content="20221203" />
 	<title>AoC 2022: day 3, profiling Go, existential crisis</title>
