--- a/templates/template.html
+++ b/templates/template.html
@@ -23,7 +23,7 @@
 	<meta property="article:tag" content="computer" />
 	<meta property="article:tag" content="software" />
 	<meta property="article:tag" content="engineering" />
-	<meta property="og:url" content="https://pineman.github.io/blog/#URL#" />
+	<meta property="og:url" content="https://pineman.github.io/#URL#" />
 	<meta property="article:published_time" content="#PUB_TIME_yyyymmdd#" />
 	<meta property="article:modified_time" content="#MOD_TIME_yyyymmdd#" />
 	<title>#TITLE#</title>
