--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -1,5 +1,4 @@
 <%= File.read('head.html') %>
-  <!--<script src="moment.min.js" async></script>-->
   <link rel="stylesheet" href="assets/fontawesome/css/all.css">
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
@@ -43,7 +42,8 @@
 </article>
 </div>
 </body>
-<!--<script>
-  document.getElementById('years').innerText = moment().diff(moment("2014-02-01"), 'years', true).toFixed(1);
-</script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+<script>
+  document.getElementById('years').innerText = moment("2014-02-01").fromNow();
+</script>
 </html>
