--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
 }
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 18px;
   line-height: 1.6;
   overflow-wrap: break-word;
