--- a/cv/index.html.erb
+++ b/cv/index.html.erb
@@ -18,7 +18,7 @@
     <hr />
     <ul id="details">
       <li><i class="fas fa-birthday-cake"></i><%=
-        require 'Date'
+        require 'date'
         dob, today = Date.new(1997, 3, 29), Date.today
         today.year - dob.year - ((today.month < dob.month || (today.month == dob.month && today.day < dob.day)) ? 1 : 0)
       %></li>
