--- a/src/index.html.erb
+++ b/src/index.html.erb
@@ -23,7 +23,7 @@
   <span>Software • Systems • Curiosity</span>
   <ul>
     <li><i class="fa fa-envelope"></i><a href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro<wbr>@gmail.com</a></li>
-    <li><i class="fas fa-file-alt" style="padding-left:1px;"></i>CV: <a href="cv/cv.pdf" target="_blank">PDF</a> or <a href="cv/index.html" target="_blank">HTML</a></li>
+    <li><i class="fas fa-file-alt"></i>CV: <a href="cv/cv.pdf" target="_blank">PDF</a> or <a href="cv/index.html" target="_blank">HTML</a></li>
     <li><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/joaocastropinheiro" target="_blank">LinkedIn</a></li>
     <li><i class="fab fa-github"></i><a href="https://github.com/pineman" target="_blank">GitHub</a></li>
     <li><i class="fas fa-key"></i><a href="assets/pubkey.asc" target="_blank">PGP key</a></li>
@@ -33,7 +33,7 @@
 <article>
   <p>Hi! My name is João Pinheiro (aka pineman), I'm from Lisbon, Portugal and I like computers. I started programming when I was 16 with Python and I've loved software ever since. Currently at <a href="https://www.amplemarket.com/">amplemarket</a>!</p>
   <p>Here are some <a href="what-i-read.html">cool articles</a> I found on the web, and some <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a> I've read. Alas, there are many more things I'd like to read and do.</p>
-  <h1 id="blog">Blog</h1>
+  <h1 id="blog"><a href="atom.xml"><i class="fas fa-square-rss"></i> Blog</a></span></h1>
   <ul>
     <%= content %>
   </ul>
