--- a/src/post.html.erb
+++ b/src/post.html.erb
@@ -1,8 +1,8 @@
 <%= File.read('partials/head.html') %>
 <%= File.read('partials/article-head.html') %>
   <meta property="og:url" content="https://pineman.github.io/<%= post.url %>" />
-  <meta property="article:published_time" content="<%= post.time.gsub('/', '') %>" />
-  <meta property="article:modified_time" content="<%= post.time.gsub('/', '') %>" />
+  <meta property="article:published_time" content="<%= post.date.gsub('/', '') %>" />
+  <meta property="article:modified_time" content="<%= post.date.gsub('/', '') %>" />
   <title><%= post.title %></title>
   <meta property="og:title" content="<%= post.title %>" />
   <meta name="description" content="<%= post.title %>" />
