--- a/src/post.html.erb
+++ b/src/post.html.erb
@@ -7,7 +7,6 @@
   <meta property="og:title" content="<%= post.title %>" />
   <meta name="description" content="<%= post.title %>" />
   <meta property="og:description" content="<%= post.title %>" />
-  <link rel="stylesheet" href="assets/oceanicnext.min.css">
 </head>
 <body>
 <div id="wrap">
@@ -18,4 +17,7 @@
 <a href="index.html">&lt; back</a>
 </div>
 </body>
+<link rel="stylesheet" href="assets/oceanicnext.min.css">
+<script src="assets/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
 </html>
