copy assets in cv

--- a/cv/index.html.erb
+++ b/cv/index.html.erb
@@ -6,13 +6,13 @@
   <meta name="theme-color" content="#171B36">
   <link rel="icon" type="image/x-icon" href="../favicon.ico" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="../assets/fontawesome/css/all.css" />
+  <link rel="stylesheet" href="assets/fontawesome/css/all.css" />
   <title>João Pinheiro CV</title>
 </head>
 <body>
 <aside>
   <side-wrap>
-    <div id="photo"><img id="photo" src="../assets/me.webp" /></div>
+    <div id="photo"><img id="photo" src="assets/me.webp" /></div>
     <h2 id="name">João Pinheiro</h2>
     <div id="description">Software • Systems • Curiosity</div>
     <hr />
