fix whitespace in title, better description

--- a/src/post.html.erb
+++ b/src/post.html.erb
@@ -5,8 +5,8 @@
   <meta property="article:modified_time" content="<%= post.date.gsub('-', '') %>" />
   <title><%= post.title %></title>
   <meta property="og:title" content="<%= post.title %>" />
-  <meta name="description" content="<%= post.title %>" />
-  <meta property="og:description" content="<%= post.title %>" />
+  <meta name="description" content="<%= post.text_descr %>" />
+  <meta property="og:description" content="<%= post.text_descr %>" />
 </head>
 <body>
 <div id="wrap">
