--- a/src/partials/article-head.html
+++ b/src/partials/article-head.html
@@ -1,6 +1,6 @@
   <meta property="og:type" content="article" />
   <meta property="article:author" content="https://pineman.github.io" />
-  <meta property="article:section" content="pineman's Blog" />
+  <meta property="article:section" content="blog" />
   <meta property="article:tag" content="technology" />
   <meta property="article:tag" content="computer" />
   <meta property="article:tag" content="software" />
