--- a/src/what-i-read.html.erb
+++ b/src/what-i-read.html.erb
@@ -13,7 +13,7 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: <%= date.strftime('%Y/%m/%d') %></h6>
+  <h6>last updated: <%= date.strftime('%Y-%m-%d') %></h6>
 <%= content %>
 </article>
 <a href="index.html">&lt; back</a>
