--- a/style.css
+++ b/style.css
@@ -96,29 +96,29 @@ header {
   --oceanic-bg: #1b2b34;
   --oceanic-fg: #c0c5ce;
 }
-pre {
-  border-radius: 0.3em;
+/* Inlines & blocks */
+code {
+  border-radius: 0.25em;
+  border: 0.25px #4e585d solid; /* oceanic-fg but darker */
+  color: var(--oceanic-fg);
+  background: var(--oceanic-bg);
+  font-size: 16px;
 }
+/* Blocks */
 pre code {
+  /* Early apply of hljs styles to avoid FOUC */
   display: block;
   overflow-x: auto;
   padding: 1em;
-  font-size: 16px;
 }
+/* Inlines */
 code:not(pre code) {
-  color: var(--oceanic-fg);
-  background: var(--oceanic-bg);
-  border-radius: 0.3em;
-  padding: 0 0.3em;
-  border: 1px var(--oceanic-bg) solid;
+  padding: 0 0.2em;
 }
 @media (prefers-color-scheme: dark) {
   body {
     background: #2a2a2a;
     color: #fafafa;
-  }
-  pre, code:not(pre code) {
-    border: 1px var(--oceanic-fg) solid;
   }
   svg {
     fill: white;
