--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ code:not(pre code) {
 }
 @media (prefers-color-scheme: dark) {
   body {
-    background: #2a2a2a;
+    background: #202020;
     color: #fafafa;
   }
   svg {
