remove og:image

--- a/src/index.html.erb
+++ b/src/index.html.erb
@@ -50,7 +50,7 @@
   <ul>
     <%= content %>
   </ul>
-  <p>List of <a href="what-i-read.html">articles I read</a> starting Dec 2022. (<a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a>)</p>
+  <p><a href="what-i-read.html">Articles I read</a> starting Dec 2022.</p>
   <a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
   <a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>
 </article>
