--- a/src/what-i-read.html.erb
+++ b/src/what-i-read.html.erb
@@ -12,7 +12,7 @@
 <div id="wrap">
 <a href="index.html">&lt; back</a>
 <article>
-  <h1>What I read (<a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a>)</h1>
+  <h1>An incomplete list of what I read/heard/saw (<a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a>)</h1>
   last updated: <%= date.strftime('%Y-%m-%d') %>
 <%= content %>
 </article>
