--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ a {
 a:hover {
   border-bottom: solid 0.0625rem;
 }
+time {
+  width: 9ch;
+  display: inline-block;
+}
 .img-link {
   border-bottom: none;
 }
