partials make more sense now

--- a/src/index.html.erb
+++ b/src/index.html.erb
@@ -1,4 +1,7 @@
-<%= File.read('partials/head.html') %>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <%= File.read('partials/head.html') %>
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
   <meta property="og:description" content="Personal homepage of João Pinheiro" />
