--- a/src/what-i-read.html.erb
+++ b/src/what-i-read.html.erb
@@ -1,6 +1,9 @@
-<%= File.read('partials/head.html') %>
-<%= File.read('partials/article-head.html') %>
-<% file = File.new("../posts/what-i-read.txt") %>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <%= File.read('partials/head.html') %>
+  <%= File.read('partials/article-head.html') %>
+  <% file = File.new("../posts/what-i-read.txt") %>
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
   <meta property="article:published_time" content="<%= file.mtime.iso8601 %>" />
   <meta property="article:modified_time" content="<%= file.mtime.iso8601 %>" />
